--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.2.1'
     compile 'com.google.firebase:firebase-core:9.6.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.wdullaer:materialdatetimepicker:1.4.1'
 }
 apply plugin: 'com.google.gms.google-services'
